; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20201.c_physread16.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20201.c_physread16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [52 x i8] c"[ ] Function requires 16-byte alignment for input!\0A\00", align 1
@cve_2012_YYYY = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*)* @physread16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @physread16(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 262143
  %12 = sdiv i32 %11, 4
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %5, align 4
  %14 = and i32 %13, 15
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = call i32 @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @exit(i32 -1) #3
  unreachable

19:                                               ; preds = %3
  %20 = load i32, i32* %5, align 4
  %21 = ashr i32 %20, 18
  %22 = shl i32 %21, 10
  %23 = or i32 11, %22
  %24 = load i32*, i32** @cve_2012_YYYY, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 960
  store i32 %23, i32* %25, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @memset(i32* %26, i32 0, i32 16)
  store i32 0, i32* %8, align 4
  br label %28

28:                                               ; preds = %92, %19
  %29 = load i32, i32* %8, align 4
  %30 = icmp slt i32 %29, 4
  br i1 %30, label %31, label %95

31:                                               ; preds = %28
  %32 = load i32, i32* %8, align 4
  %33 = mul nsw i32 %32, 8
  store i32 %33, i32* %9, align 4
  %34 = load i32*, i32** @cve_2012_YYYY, align 8
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @poke_byte(i32* %34, i32 516, i32 %35)
  %37 = load i32*, i32** %4, align 8
  %38 = load i32, i32* %7, align 4
  %39 = sdiv i32 %38, 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %37, i64 %40
  %42 = load volatile i32, i32* %41, align 4
  %43 = and i32 %42, 255
  %44 = load i32, i32* %9, align 4
  %45 = shl i32 %43, %44
  %46 = load i32*, i32** %6, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 0
  %48 = load i32, i32* %47, align 4
  %49 = or i32 %48, %45
  store i32 %49, i32* %47, align 4
  %50 = load i32*, i32** %4, align 8
  %51 = load i32, i32* %7, align 4
  %52 = sdiv i32 %51, 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %50, i64 %53
  %55 = load volatile i32, i32* %54, align 4
  %56 = and i32 %55, 65280
  %57 = ashr i32 %56, 8
  %58 = load i32, i32* %9, align 4
  %59 = shl i32 %57, %58
  %60 = load i32*, i32** %6, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 1
  %62 = load i32, i32* %61, align 4
  %63 = or i32 %62, %59
  store i32 %63, i32* %61, align 4
  %64 = load i32*, i32** %4, align 8
  %65 = load i32, i32* %7, align 4
  %66 = sdiv i32 %65, 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %64, i64 %67
  %69 = load volatile i32, i32* %68, align 4
  %70 = and i32 %69, 16711680
  %71 = ashr i32 %70, 16
  %72 = load i32, i32* %9, align 4
  %73 = shl i32 %71, %72
  %74 = load i32*, i32** %6, align 8
  %75 = getelementptr inbounds i32, i32* %74, i64 2
  %76 = load i32, i32* %75, align 4
  %77 = or i32 %76, %73
  store i32 %77, i32* %75, align 4
  %78 = load i32*, i32** %4, align 8
  %79 = load i32, i32* %7, align 4
  %80 = sdiv i32 %79, 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i32, i32* %78, i64 %81
  %83 = load volatile i32, i32* %82, align 4
  %84 = and i32 %83, -16777216
  %85 = lshr i32 %84, 24
  %86 = load i32, i32* %9, align 4
  %87 = shl i32 %85, %86
  %88 = load i32*, i32** %6, align 8
  %89 = getelementptr inbounds i32, i32* %88, i64 3
  %90 = load i32, i32* %89, align 4
  %91 = or i32 %90, %87
  store i32 %91, i32* %89, align 4
  br label %92

92:                                               ; preds = %31
  %93 = load i32, i32* %8, align 4
  %94 = add nsw i32 %93, 1
  store i32 %94, i32* %8, align 4
  br label %28

95:                                               ; preds = %28
  ret void
}

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @poke_byte(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
